regression/smv/syntax-errors/syntax2.smv
-- forgot the MODULE

VAR abc : BOOLEAN;

